# ume-music-player

./: README.md  pyproject.toml
ume_music_player/: __main__.py
